fix: prevent text wrap to avoid side effects

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid-dropdown-filter.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid-dropdown-filter.scss
@@ -109,6 +109,7 @@ $root: ".widget-dropdown-filter";
     &-menu-item-text {
         overflow: hidden;
         text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     &-checkbox-slot {
